fixed overflow-x problem

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body, html {
   height: 100%;
   scroll-behavior: smooth;
   font-size: 20px;
-  overflow-x: hidden;
 }
 
 @media all and (min-width: 992px) {
@@ -57,7 +56,13 @@ body, html {
     height: 10rem !important;
   }
   .section_titles {
-    font-size: 2rem;
+    font-size: 2rem !important;
+  }
+  .card-body {
+    display: none !important;
+  }
+  .portfolio_img {
+      opacity: 1 !important;
   }
 
 }
@@ -84,6 +89,7 @@ p {
   align-items: center;
   flex-grow: 1;
   max-width: 100%;
+
 }
 
 .landingtitle {
@@ -214,6 +220,7 @@ p {
   display: flex;
   justify-content: center;
   margin-top: 1.5rem;
+  margin-right: 0 !important;
 }
 
 .imagecols {
@@ -233,7 +240,8 @@ p {
     /* margin-left: -100%; */
     height: 100%;
     text-align: center;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .card-title {
@@ -242,7 +250,7 @@ p {
     visibility: hidden;
     transition-delay: 0s;
     height: 100%;
-    overflow: scroll;
+    /* overflow: scroll; */
     padding: 2.5rem;
 }
 
@@ -343,6 +351,7 @@ p {
 
 .experiences {
   margin-top: 5rem;
+  overflow-x: hidden;
 
 }
 .bearpic {
@@ -368,6 +377,10 @@ p {
 }
 .section_divider {
   width: 100%;
+  transform: rotate(3deg);
+}
+.dividerrow {
+  margin-top: -1.5rem;
 }
 .experience_titles {
   font-size: 1.25rem;
